--- a/ams-pms-hook/build.gradle
+++ b/ams-pms-hook/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:2.1.3'
     }
 }
 apply plugin: 'com.android.application'
@@ -17,7 +17,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.weishu.upf.ams_pms_hook.app"
+        applicationId "com.baidu.appsearch"
         minSdkVersion 8
         targetSdkVersion 19
         versionCode 1
