--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':intercept-activity', ':receiver-management', ':service-management', ':contentprovider-management'
+include ':intercept-activity', ':receiver-management', ':service-management', ':contentprovider-management', ':mvp'
 include ':dynamic-proxy-hook'
 include ':ams-pms-hook'
 include 'binder-hook'
